fix: slightly broken style on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -227,4 +227,8 @@ button:hover {
   h1 { font-size: 1.75rem; }
   h2 { font-size: 1.5rem; }
   h3 { font-size: 1.25rem; }
+
+  span.bookmark-indicator {
+    padding-right: 2px;
+  }
 }
